Fixed the items of the portfolio that were not centered

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2352,7 +2352,7 @@
 		.image.fit {
 			display: block;
 			margin: 0 0 2rem 0;
-			width: 75%;
+			width: 100%;
 		}
 
 			.image.fit img {
